--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/common/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Techvaganza</title>
+    <style>
+      link[rel="icon"] {
+          filter: brightness(0.8);
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
